# codetective

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
src/: api_selection.rs  code_analysis.rs  code_retrieve.rs  detection_pass.rs  main.rs
src/api/: mod.rs  openrt.rs
src/apis/: claude.rs  gemini.rs  groqcl.rs  mod.rs  openai.rs  openrt.rs
src/file/: local.rs  mod.rs  remote.rs  suffix.rs  upload.rs
src/utils/: error.rs  gadgets.rs  mod.rs
