[package]
name = "button-counter"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
leptos_router = "0.7"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-net = { version = "0.6.0", features = ["http"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
