[package]
name = "codetective"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
leptos_router = "0.7"
web-sys = { version = "0.3", features = ["DataTransfer"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-file = { version = "0.3", features = ["futures"] }
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
reqwest = { version = "0.12", features = ["json"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
const_format = "0.2"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
